gcc/testsuite/rust/rustc/ui/pattern/patkind-ref-binding-issue-114896.rs
//@ run-rustfix
#![allow(dead_code)]

fn main() {
    fn x(a: &char) {
        let &b = a;
        b.make_ascii_uppercase();
// { dg-error ".E0596." "" { target *-*-* } .-1 }
    }
}

